--- a/index.html
+++ b/index.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="assets/css/style.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+        <title>ExploreHelix</title>
+    </head>
 
-    <title>ExploreHelix</title>
-</head>
+    <body>
+        <header>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <div class="row jumbo-top">
+                        <div class="col-6 text-center main-jumbo">
+                            <img
+                                src="assets/imgs/logo.jpg"
+                                alt="logo"
+                                width="100"
+                                height="100"
+                            />
+                            <h1 class="display-4">
+                                <span class="caps">E</span>xplore<span
+                                    class="caps"
+                                    >H</span
+                                >elix
+                            </h1>
+                            <p class="lead">
+                                Familiarise yourself with the Urban Sciences
+                                Building by taking a guided tour of the building
+                                or get directions to specific rooms using
+                                directions that are easy to follow.
+                            </p>
+                        </div>
 
-<body>
-    <header>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container-fluid">
-                <div class="row jumbo-top">
-                    <div class="col-6 text-center">
-                        <img src="assets/imgs/logo.jpg" alt="logo" width="100" height="100">
-                        <h1 class="display-4">ExploreHelix</h1>
-                        <!-- <p class="lead">
-                            Sample Text here
+                        <div class="col-6 images">
+                            <img
+                                src="assets/imgs/placeholder.jpg"
+                                alt="placeholder"
+                                class="image"
+                            />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 text-center">
+                            <!-- <p class="lead">
+                            Familiarise yourself with the Urban Sciences Building by taking a guided tour of the
+                            building or get directions to specific
+                            rooms using directions that are easy to follow.
                         </p> -->
-                    </div>
-
-                    <div class="col-6 images">
-                        <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                        <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                        <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6 text-center">
-                        <p class="lead">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum assumenda reiciendis
-                            saepe, tempore distinctio officiis rerum maxime modi alias ea nesciunt error atque quae fuga
-                            iure, dolor sapiente provident hic?
-                        </p>
-                    </div>
-                    <div class="col-6 test text-center">
-                        <button type="button" class="btn btn-light btn-lg">Download</button>
-                    </div>
-                    <!-- <div class="row download">
+                        </div>
+                        <div class="col-6 dld text-center">
+                            <button type="button" class="btn btn-light btn-lg">
+                                Download
+                            </button>
+                        </div>
+                        <!-- <div class="row download">
                     <button type="button" class="btn btn-light btn-lg" id="dld-button">Download</button>
                 </div> -->
-                </div>
+                    </div>
 
-                <!-- <nav aria-label="Page navigation">
+                    <!-- <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
                     <li class="page-item active" aria-current="page">
                         <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
@@ -57,124 +80,177 @@
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
                 </ul>
             </nav> -->
-
-                <div class="container">
-                    <div class="row">
-                        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-                            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
+                </div>
+                <!-- <div class="container">
+                <div class="row">
+                    <div class="col"> -->
+                <nav
+                    class="navbar navbar-expand-lg navbar-light"
+                    id="navigation-bar"
+                >
+                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button> -->
 
-                            <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
-                                <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="#">App <span class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Info</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
+                    <div
+                        class="collapse navbar-collapse navigation"
+                        id="navbarSupportedContent"
+                    >
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#"
+                                    >App
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Building Info</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <!-- </div>
+                </div>
+            </div> -->
+            </div>
+        </header>
+
+        <main class="content">
+            <div class="container">
+                <div class="row">
+                    <h4>Tour</h4>
+                </div>
+                <div class="row search-feature">
+                    <div class="col-6">
+                        <p>
+                            The tour feature allows you to see the important
+                            parts of the buildings. The tour starts at the
+                            entrance and you will be guided to the finish.
+                        </p>
+                        <p>
+                            You can end the tour whenever and you can also take
+                            the tour multiple times.
+                        </p>
+                    </div>
+                    <div class="col-6 images">
+                        <img
+                            src="assets/imgs/placeholder.jpg"
+                            alt="placeholder"
+                            class="image"
+                        />
+                        <img
+                            src="assets/imgs/placeholder.jpg"
+                            alt="placeholder"
+                            class="image"
+                        />
                     </div>
                 </div>
             </div>
-    </header>
 
-    <main>
-        <div class="container">
-            <div class="row">
-                <h4>Search Feature</h4>
-            </div>
-            <div class="row search-feature">
-                <div class="col-6">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam reprehenderit alias totam
-                        nulla,
-                        architecto, quos eaque illum numquam, nisi beatae at in dolorum dignissimos amet. Numquam
-                        natus
-                        magni recusandae repudiandae?
-                    </p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam reprehenderit alias totam
-                        nulla,
-                        architecto, quos eaque illum numquam, nisi beatae at in dolorum dignissimos amet. Numquam
-                        natus
-                        magni recusandae repudiandae?
-                    </p>
+            <div class="container">
+                <div class="row">
+                    <h4>Search</h4>
                 </div>
-                <div class="col-6 images">
-                    <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                    <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                </div>
-            </div>
-        </div>
-
-        <hr />
-
-        <div class="container">
-            <div class="row">
-                <h4>Search</h4>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio distinctio necessitatibus, nobis
-                        nisi exercitationem architecto excepturi est quam perspiciatis a repudiandae dolorum? Commodi,
-                        quisquam perferendis. Libero sed vel dolorem beatae.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, ratione? Laboriosam iusto
-                        dignissimos veniam quod perferendis perspiciatis, quisquam voluptates in fugit? Dicta assumenda
-                        fugit recusandae voluptates nostrum, ducimus eius? Tenetur?
-                    </p>
-                </div>
-                <div class="col-6 images">
-                    <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                    <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
+                <div class="row">
+                    <div class="col-6">
+                        <p>
+                            Using this feature, you can search for a room in the
+                            building or select one of the suggested locations.
+                        </p>
+                        <p>
+                            Selecting a room will allow you to see where the
+                            room is on the map, further details about the room
+                            and get directions to that room.
+                        </p>
+                    </div>
+                    <div class="col-6 images">
+                        <img
+                            src="assets/imgs/placeholder.jpg"
+                            alt="placeholder"
+                            class="image"
+                        />
+                        <img
+                            src="assets/imgs/placeholder.jpg"
+                            alt="placeholder"
+                            class="image"
+                        />
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="container">
-            <div class="row">
-                <h4>Tour</h4>
+            <div class="container last">
+                <div class="row">
+                    <h4>Directions</h4>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            The directions will take you from the entrance of
+                            the USB to the selected destination.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p>
+                            You can then set your own start location simply by
+                            dropping a pin where you are or by using the locate
+                            me feature.
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            The directions will be displayed on the map using a
+                            line and an arrow guiding you to the final location.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p>
+                            The directions will always be the shortest path from
+                            the start location to the finish.
+                        </p>
+                    </div>
+                </div>
+                <div class="row images">
+                    <img
+                        src="assets/imgs/placeholder.jpg"
+                        alt="placeholder"
+                        class="image"
+                    />
+                    <img
+                        src="assets/imgs/placeholder.jpg"
+                        alt="placeholder"
+                        class="image"
+                    />
+                    <img
+                        src="assets/imgs/placeholder.jpg"
+                        alt="placeholder"
+                        class="image"
+                    />
+                </div>
             </div>
-            <div class="row">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, debitis tenetur exercitationem
-                    quis adipisci veritatis commodi rerum laudantium ut voluptatem, pariatur laboriosam aperiam
-                    illum incidunt repellendus neque voluptate officiis ex?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, cum, praesentium illum
-                    numquam adipisci corporis ea ad ipsam soluta, voluptas quis eum rerum porro possimus quibusdam
-                    incidunt? Nihil, suscipit accusamus.
-                </p>
-            </div>
-            <div class="row images">
-                <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-                <img src="assets/imgs/placeholder.jpg" alt="placeholder" width="100" height="187">
-            </div>
-        </div>
-    </main>
+        </main>
 
-    <footer>
+        <footer></footer>
 
-    </footer>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"
+        ></script>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="assets/js/app.js"></script>
-</body>
-
+        <script src="assets/js/app.js"></script>
+    </body>
 </html>
