changed color and font sizes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             />
                             <h1 class="display-4">
                                 <span class="caps">E</span>xplore<span
-                                    class="caps"
+                                    class="caps mobile-split"
                                     >H</span
                                 >elix
                             </h1>
@@ -45,7 +45,7 @@
                             </p>
                         </div>
 
-                        <div class="col-6 images">
+                        <div class="col-6 jumbo-img images">
                             <img
                                 src="assets/imgs/placeholder.jpg"
                                 alt="placeholder"
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 text-center">
+                        <div class="col-6 empty-container text-center">
                             <!-- <p class="lead">
                             Familiarise yourself with the Urban Sciences Building by taking a guided tour of the
                             building or get directions to specific
@@ -122,7 +122,7 @@
                 <div class="row">
                     <h4>Tour</h4>
                 </div>
-                <div class="row search-feature">
+                <div class="row tour-feature">
                     <div class="col-6">
                         <p>
                             The tour feature allows you to see the important
@@ -153,7 +153,7 @@
                 <div class="row">
                     <h4>Search</h4>
                 </div>
-                <div class="row">
+                <div class="row search-feature">
                     <div class="col-6">
                         <p>
                             Using this feature, you can search for a room in the
