--- a/index.html
+++ b/index.html
@@ -20,58 +20,57 @@
     </head>
 
     <body>
-        <header>
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <div class="row jumbo-top">
-                        <div class="col-6 text-center main-jumbo">
-                            <img
-                                src="assets/imgs/logo.jpg"
-                                alt="logo"
-                                width="100"
-                                height="100"
-                            />
-                            <h1 class="display-4">
-                                <span class="caps">E</span>xplore<span
-                                    class="caps mobile-split"
-                                    >H</span
-                                >elix
-                            </h1>
-                            <p class="lead">
-                                Familiarise yourself with the Urban Sciences
-                                Building by taking a guided tour of the building
-                                or get directions to specific rooms using
-                                directions that are easy to follow.
-                            </p>
-                        </div>
-
-                        <div class="col-6 jumbo-img images">
-                            <img
-                                src="assets/imgs/placeholder.jpg"
-                                alt="placeholder"
-                                class="image"
-                            />
-                        </div>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <div class="row jumbo-top">
+                    <div class="col-sm text-center main-jumbo">
+                        <img
+                            src="assets/imgs/logo.jpg"
+                            alt="logo"
+                            width="100"
+                            height="100"
+                        />
+                        <h1 class="display-4">
+                            <span class="caps">E</span>xplore<span
+                                class="caps mobile-split"
+                                >H</span
+                            >elix
+                        </h1>
+                        <p class="lead">
+                            Familiarise yourself with the Urban Sciences
+                            Building by taking a guided tour of the building or
+                            get directions to specific rooms using directions
+                            that are easy to follow.
+                        </p>
                     </div>
-                    <div class="row">
-                        <div class="col-6 empty-container text-center">
-                            <!-- <p class="lead">
+
+                    <div class="col-sm jumbo-img images">
+                        <img
+                            src="assets/imgs/placeholder.jpg"
+                            alt="placeholder"
+                            class="image"
+                        />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 empty-container text-center">
+                        <!-- <p class="lead">
                             Familiarise yourself with the Urban Sciences Building by taking a guided tour of the
                             building or get directions to specific
                             rooms using directions that are easy to follow.
                         </p> -->
-                        </div>
-                        <div class="col-6 dld text-center">
-                            <button type="button" class="btn btn-light btn-lg">
-                                Download
-                            </button>
-                        </div>
-                        <!-- <div class="row download">
+                    </div>
+                    <div class="col-sm dld text-center">
+                        <button type="button" class="btn btn-light btn-lg">
+                            Download
+                        </button>
+                    </div>
+                    <!-- <div class="row download">
                     <button type="button" class="btn btn-light btn-lg" id="dld-button">Download</button>
                 </div> -->
-                    </div>
+                </div>
 
-                    <!-- <nav aria-label="Page navigation">
+                <!-- <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
                     <li class="page-item active" aria-current="page">
                         <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
@@ -80,145 +79,59 @@
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
                 </ul>
             </nav> -->
-                </div>
-                <!-- <div class="container">
+            </div>
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col"> -->
-                <nav
-                    class="navbar navbar-expand-lg navbar-light"
-                    id="navigation-bar"
-                >
-                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
+            <nav
+                class="navbar navbar-expand-lg navbar-light"
+                id="navigation-bar"
+            >
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button> -->
 
-                    <div
-                        class="collapse navbar-collapse navigation"
-                        id="navbarSupportedContent"
-                    >
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#"
-                                    >App
-                                    <span class="sr-only">(current)</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Building Info</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-                <!-- </div>
+                <div
+                    class="collapse navbar-collapse navigation"
+                    id="navbarSupportedContent"
+                >
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#"
+                                >App
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Building Info</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- </div>
                 </div>
             </div> -->
-            </div>
-        </header>
+        </div>
 
-        <main class="content">
-            <div class="container">
-                <div class="row">
-                    <h4>Tour</h4>
-                </div>
-                <div class="row tour-feature">
-                    <div class="col-6">
-                        <p>
-                            The tour feature allows you to see the important
-                            parts of the buildings. The tour starts at the
-                            entrance and you will be guided to the finish.
-                        </p>
-                        <p>
-                            You can end the tour whenever and you can also take
-                            the tour multiple times.
-                        </p>
-                    </div>
-                    <div class="col-6 images">
-                        <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
-                            class="image"
-                        />
-                        <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
-                            class="image"
-                        />
-                    </div>
-                </div>
+        <div class="container">
+            <div class="row">
+                <h4>Tour</h4>
             </div>
-
-            <div class="container">
-                <div class="row">
-                    <h4>Search</h4>
+            <div class="row tour-feature">
+                <div class="col-sm">
+                    <p>
+                        The tour feature allows you to see the important parts
+                        of the buildings. The tour starts at the entrance and
+                        you will be guided to the finish.
+                    </p>
+                    <p>
+                        You can end the tour whenever and you can also take the
+                        tour multiple times.
+                    </p>
                 </div>
-                <div class="row search-feature">
-                    <div class="col-6">
-                        <p>
-                            Using this feature, you can search for a room in the
-                            building or select one of the suggested locations.
-                        </p>
-                        <p>
-                            Selecting a room will allow you to see where the
-                            room is on the map, further details about the room
-                            and get directions to that room.
-                        </p>
-                    </div>
-                    <div class="col-6 images">
-                        <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
-                            class="image"
-                        />
-                        <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
-                            class="image"
-                        />
-                    </div>
-                </div>
-            </div>
-
-            <div class="container last">
-                <div class="row">
-                    <h4>Directions</h4>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <p>
-                            The directions will take you from the entrance of
-                            the USB to the selected destination.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <p>
-                            You can then set your own start location simply by
-                            dropping a pin where you are or by using the locate
-                            me feature.
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <p>
-                            The directions will be displayed on the map using a
-                            line and an arrow guiding you to the final location.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <p>
-                            The directions will always be the shortest path from
-                            the start location to the finish.
-                        </p>
-                    </div>
-                </div>
-                <div class="row images">
-                    <img
-                        src="assets/imgs/placeholder.jpg"
-                        alt="placeholder"
-                        class="image"
-                    />
+                <div class="col-sm images">
                     <img
                         src="assets/imgs/placeholder.jpg"
                         alt="placeholder"
@@ -231,9 +144,90 @@
                     />
                 </div>
             </div>
-        </main>
+        </div>
 
-        <footer></footer>
+        <div class="container">
+            <div class="row">
+                <h4>Search</h4>
+            </div>
+            <div class="row search-feature">
+                <div class="col-sm">
+                    <p>
+                        Using this feature, you can search for a room in the
+                        building or select one of the suggested locations.
+                    </p>
+                    <p>
+                        Selecting a room will allow you to see where the room is
+                        on the map, further details about the room and get
+                        directions to that room.
+                    </p>
+                </div>
+                <div class="col-sm images">
+                    <img
+                        src="assets/imgs/placeholder.jpg"
+                        alt="placeholder"
+                        class="image"
+                    />
+                    <img
+                        src="assets/imgs/placeholder.jpg"
+                        alt="placeholder"
+                        class="image"
+                    />
+                </div>
+            </div>
+        </div>
+
+        <div class="container last">
+            <div class="row">
+                <h4>Directions</h4>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <p>
+                        The directions will take you from the entrance of the
+                        USB to the selected destination.
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <p>
+                        You can then set your own start location simply by
+                        dropping a pin where you are or by using the locate me
+                        feature.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <p>
+                        The directions will be displayed on the map using a line
+                        and an arrow guiding you to the final location.
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <p>
+                        The directions will always be the shortest path from the
+                        start location to the finish.
+                    </p>
+                </div>
+            </div>
+            <div class="row images">
+                <img
+                    src="assets/imgs/placeholder.jpg"
+                    alt="placeholder"
+                    class="image"
+                />
+                <img
+                    src="assets/imgs/placeholder.jpg"
+                    alt="placeholder"
+                    class="image"
+                />
+                <img
+                    src="assets/imgs/placeholder.jpg"
+                    alt="placeholder"
+                    class="image"
+                />
+            </div>
+        </div>
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -250,7 +244,6 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"
         ></script>
-
         <script src="assets/js/app.js"></script>
     </body>
 </html>
