--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h4>Tour</h4>
             </div>
             <div class="row tour-feature">
-                <div class="col-sm">
+                <div class="col-sm-12 col-md-6">
                     <p>
                         The tour feature allows you to see the important parts
                         of the buildings. The tour starts at the entrance and
@@ -131,12 +131,14 @@
                         tour multiple times.
                     </p>
                 </div>
-                <div class="col-sm images">
+                <div class="col-sm-6 col-md-3 images">
                     <img
                         src="assets/imgs/placeholder.jpg"
                         alt="placeholder"
                         class="image"
                     />
+                </div>
+                <div class="col-sm-6 col-md-3 images">
                     <img
                         src="assets/imgs/placeholder.jpg"
                         alt="placeholder"
@@ -151,7 +153,7 @@
                 <h4>Search</h4>
             </div>
             <div class="row search-feature">
-                <div class="col-sm">
+                <div class="col-sm-12 col-md-6">
                     <p>
                         Using this feature, you can search for a room in the
                         building or select one of the suggested locations.
@@ -162,12 +164,14 @@
                         directions to that room.
                     </p>
                 </div>
-                <div class="col-sm images">
+                <div class="col-sm-6 col-md-3 images">
                     <img
                         src="assets/imgs/placeholder.jpg"
                         alt="placeholder"
                         class="image"
                     />
+                </div>
+                <div class="col-sm-6 col-md-3 images">
                     <img
                         src="assets/imgs/placeholder.jpg"
                         alt="placeholder"
