--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="row jumbo-top">
                     <div class="col-sm text-center main-jumbo">
                         <img
-                            src="assets/imgs/logo.jpg"
+                            src="assets/imgs/Helix logo3.png"
                             alt="logo"
                             width="100"
                             height="100"
@@ -115,7 +115,7 @@
             </div> -->
         </div>
 
-        <div class="container">
+        <div class="container section-1">
             <div class="row">
                 <h4>Tour</h4>
             </div>
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container section-2">
             <div class="row">
                 <h4>Search</h4>
             </div>
@@ -181,7 +181,7 @@
             </div>
         </div>
 
-        <div class="container last">
+        <div class="container section-3">
             <div class="row">
                 <h4>Directions</h4>
             </div>
