changes building-info to urban-sciences-building

--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -41,9 +41,9 @@
                         </h1>
                         <p class="lead">
                             Familiarise yourself with the Urban Sciences
-                            Building by taking a guided tour of the building or
-                            get directions to specific rooms using directions
-                            that are easy to follow.
+                            Building by taking a tour of the building or get
+                            directions to specific rooms using directions that
+                            are easy to follow.
                         </p>
                     </div>
 
@@ -74,11 +74,11 @@
                 >
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">App </a>
+                            <a class="nav-link" href="index.html">App </a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#"
-                                >Building Info
+                                >Urban Sciences Building
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
