--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         </h1>
                         <p class="lead">
                             Familiarise yourself with the Urban Sciences
-                            Building by taking a guided tour of the building or
-                            get directions to specific rooms using directions
-                            that are easy to follow.
+                            Building by taking a tour of the building or get
+                            directions to specific rooms using directions that
+                            are easy to follow.
                         </p>
                     </div>
 
@@ -106,7 +106,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="buildingInfo.html"
-                                >Building Info</a
+                                >Urban Sciences Building</a
                             >
                         </li>
                     </ul>
