adds images to urban-sciences-building

--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -141,6 +141,7 @@
                     <img
                         src="./assets/imgs/punchcard.jpg"
                         alt="punchcard-image"
+                        class="punchcard-image img-fluid"
                     />
                 </div>
             </div>
@@ -207,7 +208,7 @@
                 <h4>Lecture Theatre</h4>
             </div>
             <div class="row lecture-theatre">
-                <div class="col-sm-12 col-md-6">
+                <div class="col">
                     <p>
                         Capacity of 303 students and has the ability for the
                         lecturer to customise what is shown on each of the
@@ -220,7 +221,13 @@
                         lumbar support.
                     </p>
                 </div>
-                <div class="col-sm-6 col-md-6 images"></div>
+            </div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/lecture-theatre.jpg"
+                    alt="lecture-theatre-img"
+                    class="img-fluid"
+                />
             </div>
         </div>
 
@@ -229,7 +236,7 @@
                 <h4>Flat Floor Teaching</h4>
             </div>
             <div class="row floor-teaching">
-                <div class="col-sm-12 col-md-6">
+                <div class="col">
                     <p>
                         312 machines, with all the software that students will
                         need for their degree. The machines run NetSupport
@@ -244,6 +251,13 @@
                     </p>
                 </div>
             </div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/flat-floor-teaching.jpg"
+                    alt="flat-floor-teaching-image"
+                    class="img-fluid"
+                />
+            </div>
             <div class="col-sm-6 col-md-6 images"></div>
         </div>
 
@@ -252,14 +266,20 @@
                 <h4>Roof Terrace</h4>
             </div>
             <div class="row roof-terrace">
-                <div class="col-sm-12 col-md-6">
+                <div class="col">
                     <p>
                         There are 2 roof terraces in the building on 4th and 5th
                         Floors with the 4th floor being used by students.
                     </p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-6 images"></div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/roof-terrace.jpg"
+                    alt="roof-terrace-image"
+                    class="img-fluid"
+                />
+            </div>
         </div>
 
         <div class="container section-9">
