--- a/index.html
+++ b/index.html
@@ -53,46 +53,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 empty-container text-center">
-                        <!-- <p class="lead">
-                            Familiarise yourself with the Urban Sciences Building by taking a guided tour of the
-                            building or get directions to specific
-                            rooms using directions that are easy to follow.
-                        </p> -->
-                    </div>
+                    <div class="col-6 empty-container text-center"></div>
                     <div class="col-sm dld text-center">
                         <button type="button" class="btn btn-light btn-lg">
                             Download
                         </button>
                     </div>
-                    <!-- <div class="row download">
-                    <button type="button" class="btn btn-light btn-lg" id="dld-button">Download</button>
-                </div> -->
                 </div>
-
-                <!-- <nav aria-label="Page navigation">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item active" aria-current="page">
-                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                </ul>
-            </nav> -->
             </div>
-            <!-- <div class="container">
-                <div class="row">
-                    <div class="col"> -->
+
             <nav
                 class="navbar navbar-expand-lg navbar-light"
                 id="navigation-bar"
             >
-                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button> -->
-
                 <div
                     class="collapse navbar-collapse navigation"
                     id="navbarSupportedContent"
@@ -112,9 +85,6 @@
                     </ul>
                 </div>
             </nav>
-            <!-- </div>
-                </div>
-            </div> -->
         </div>
 
         <div class="container section-1">
