changes image layout

--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -207,6 +207,13 @@
             <div class="row">
                 <h4>Lecture Theatre</h4>
             </div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/lecture-theatre.jpg"
+                    alt="lecture-theatre-img"
+                    class="img-fluid row-img"
+                />
+            </div>
             <div class="row lecture-theatre">
                 <div class="col">
                     <p>
@@ -222,18 +229,18 @@
                     </p>
                 </div>
             </div>
-            <div class="row images">
-                <img
-                    src="./assets/imgs/lecture-theatre.jpg"
-                    alt="lecture-theatre-img"
-                    class="img-fluid"
-                />
-            </div>
         </div>
 
         <div class="container section-7">
             <div class="row">
                 <h4>Flat Floor Teaching</h4>
+            </div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/flat-floor-teaching.jpg"
+                    alt="flat-floor-teaching-image"
+                    class="img-fluid row-img"
+                />
             </div>
             <div class="row floor-teaching">
                 <div class="col">
@@ -251,19 +258,19 @@
                     </p>
                 </div>
             </div>
-            <div class="row images">
-                <img
-                    src="./assets/imgs/flat-floor-teaching.jpg"
-                    alt="flat-floor-teaching-image"
-                    class="img-fluid"
-                />
-            </div>
             <div class="col-sm-6 col-md-6 images"></div>
         </div>
 
         <div class="container section-8">
             <div class="row">
                 <h4>Roof Terrace</h4>
+            </div>
+            <div class="row images">
+                <img
+                    src="./assets/imgs/roof-terrace.jpg"
+                    alt="roof-terrace-image"
+                    class="img-fluid row-img"
+                />
             </div>
             <div class="row roof-terrace">
                 <div class="col">
@@ -272,13 +279,6 @@
                         Floors with the 4th floor being used by students.
                     </p>
                 </div>
-            </div>
-            <div class="row images">
-                <img
-                    src="./assets/imgs/roof-terrace.jpg"
-                    alt="roof-terrace-image"
-                    class="img-fluid"
-                />
             </div>
         </div>
 
