fixed nav-bar on mobile

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                     class="collapse navbar-collapse navigation"
                     id="navbarSupportedContent"
                 >
-                    <ul class="navbar-nav mx-auto">
+                    <ul
+                        class="navbar-nav mx-auto flex-column-reverse flex-md-row"
+                    >
                         <li class="nav-item active">
                             <a class="nav-link" href="#"
                                 >App
