more fixes to navbar

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <nav
-                class="navbar navbar-expand-lg navbar-light"
+                class="navbar navbar-expand-lg navbar-dark"
                 id="navigation-bar"
             >
                 <button
