--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <nav
-                class="navbar navbar-expand-lg navbar-light"
+                class="navbar navbar-expand-lg navbar-dark"
                 id="navigation-bar"
             >
                 <button
