adds footer and references

--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -323,6 +323,21 @@
             </div>
         </div>
 
+        <!-- Footer -->
+        <footer class="page-footer font-small blue">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">
+                Images and text taken from
+                <a
+                    class="footer-link"
+                    href="https://www.ncl.ac.uk/computing/about/usb/"
+                    >Newcastle University.</a
+                >
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
