--- a/buildingInfo.html
+++ b/buildingInfo.html
@@ -49,8 +49,8 @@
 
                     <div class="col-sm jumbo-img images">
                         <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
+                            src="assets/imgs/homepage_mockup.png"
+                            alt="homepage"
                             class="image"
                         />
                     </div>
