--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
                     <div class="col-sm jumbo-img images">
                         <img
-                            src="assets/imgs/placeholder.jpg"
-                            alt="placeholder"
+                            src="assets/imgs/homepage_mockup.png"
+                            alt="homepage"
                             class="image"
                         />
                     </div>
@@ -151,15 +151,15 @@
                 </div>
                 <div class="col-sm-6 col-md-3 images">
                     <img
-                        src="assets/imgs/placeholder.jpg"
-                        alt="placeholder"
+                        src="assets/imgs/search-1-mockup.png"
+                        alt="search-image"
                         class="image"
                     />
                 </div>
                 <div class="col-sm-6 col-md-3 images">
                     <img
-                        src="assets/imgs/placeholder.jpg"
-                        alt="placeholder"
+                        src="assets/imgs/search-2-mockup.png"
+                        alt="search-image"
                         class="image"
                     />
                 </div>
@@ -201,18 +201,18 @@
             </div>
             <div class="row images">
                 <img
-                    src="assets/imgs/placeholder.jpg"
-                    alt="placeholder"
+                    src="assets/imgs/direction-1-mockup.png"
+                    alt="directions-image"
                     class="image"
                 />
                 <img
-                    src="assets/imgs/placeholder.jpg"
-                    alt="placeholder"
+                    src="assets/imgs/direction-3-mockup.png"
+                    alt="directions-image"
                     class="image"
                 />
                 <img
-                    src="assets/imgs/placeholder.jpg"
-                    alt="placeholder"
+                    src="assets/imgs/direction-2-mockup.png"
+                    alt="directions-image"
                     class="image"
                 />
             </div>
